# RAGXiv

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: app.py  app_cli.py  chains.py  config.py  core.py  loaders.py  main.py  map_reduce.py  memory.py  rag.py  reduce.py  semantic_search.py  streamlit_app.js  streamlit_app.py  streamlit_utils.py  stuff.py  templates.py  utils.py
app/rag/: chains.py  loaders.py  memory.py  templates.py  utils.py
app/st_helpers/: streamlit_utils.py
app/views/: paper_qa.py  rag_chat copy.py  rag_chat.py  reference_graph.py  semantic_search.py  settings.py  summarization.py
data/: category_map.json  qa_pairs.csv  qa_pairs_attention_is_all_you_need.json  questions.yaml  super_categories.json
data/dataset_general/: dataset_info.json
src/: config.py  download_papers.py
src/data_processing/: configs.py  data_utils.py  download_papers.py  eda.py  experiments.ipynb  request_paper_metadata.py
src/eval/: eval.py  evaluate.py  evaluate_chunking.py  evaluate_retrieval.py  ragas.ipynb  ragas.py  results.md
src/scripts/: create_db.py  db_manager.py  experiments.ipynb  generate_question_answer_pairs.py  index.py  index_old.py  init_vectorstore.py  requirements.txt  sync_dsvs.py
src/test_sub/: eval.py  eval_test.ipynb  pyproject.toml  qa_results.csv  ragas.ipynb  ragas.py  requirements.txt  test.ipynb
src/test_sub/qa_dataset/: data-00000-of-00001.arrow  state.json
