[tool.poetry]
name = "eval"
version = "0.1.0"
description = ""
authors = ["ilyii <ihettenbach@gmx.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-core = "^0.3.2"
langfuse = "^2.50.2"
langchain-openai = "^0.2.0"
ragas = "<0.1.20"
datasets = "^3.0.0"
chromadb = "^0.5.7"
langchain = "<0.3"
sentence-transformers = "^3.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
