[tool.poetry]
name = "eval"
version = "0.1.0"
description = ""
authors = ["ilyii <ihettenbach@gmx.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-core = ">=0.2.38"
langchain-community = "<0.3"
langchain = "0.2.16"
langchain-openai = "<0.2"
langchain-huggingface = "<0.1"
bs4 = "^0.0.2"
faiss-cpu = "^1.8.0.post1"
seaborn = "^0.13.2"
ragas = "^0.1.20"
langchain-qdrant = "^0.1.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
